# fastapi_rbac

./: .changelogrc.md  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  AGENTS.md  ANALYSIS_FINDINGS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  CORS_TROUBLESHOOTING.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEVELOPER_SETUP.md  DOCKER_FINAL_STATUS.md  DOCUMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FRONTEND_SECURITY_INTEGRATION.md  PRODUCTION_SETUP.md  README.md  RELEASE.md  REPOSITORY_INFO.md  alembic.ini  create-dbs.sql  docker-compose.dev.yml  docker-compose.prod-test.yml  docker-compose.test.yml  docker-compose.yml  docker-env.ps1  index.html  logging.ini  mkdocs.yml  pgadmin.yml  push-to-dockerhub.ps1  push-to-dockerhub.sh  pyproject.toml  (+10 more)
backend/: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .isort.cfg  Dockerfile  Dockerfile.prod  ENV_CONSOLIDATION_GUIDE.md  README.dockerhub.md  README.worker.dockerhub.md  backend.env  backend.md  celerybeat-schedule.bak  conftest.py  cors_debug.py  dev.db  dev.db-shm  dev.db-wal  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.minimal.yml  docker-compose.test.yml  docker-compose.yml  fix_crud_calls.py  fix_factory_methods.py  fix_final_test_issues.py  fix_imports.py  fix_password_requirements.py  fix_remaining_issues.py  init_data.py  logging.ini  mypy.ini  pgadmin.yml  production.env.example  pyproject.toml  pyproject.toml.bak  pytest.ini  queue.dockerfile  queue.dockerfile.prod  (+9 more)
backend/.docker/: openssl.cnf
backend/alembic/: env.py
backend/alembic/versions/: 2024_04_24_1442-74a7cd91e8fa_initial.py  2024_04_24_1451-f222f6b8f5de_mapping.py  2024_04_24_1457-0c11825e2e0c_new.py  2024_04_24_1523-c93f54e30e5c_new_2.py  2024_04_25_2213-8c263ccc446a_add_created_by_id_instead_of_inserted_by.py  2025_04_25_0144-5c76e4868fe4_add_account_locking_columns.py  2025_04_25_1200-add_needs_to_change_password.py  2025_04_26_0957-10fcb44b9e37_rename_needs_to_change_password_column.py  2025_04_26_1004-bd7fd9f11370_merge_heads.py  2025_04_26_1010-rename_needs_to_change_password.py  2025_04_26_1020-2271ef9d5855_fix_rolegroupmap_case_conflict.py  2025_04_27_1359-24cc34ec6962_add_role_group_id_field_to_roles.py  2025_04_27_1523-add_audit_logs.py  2025_04_27_1524_merge_heads.py  2025_04_27_1525_add_role_group_map.py  2025_04_27_1526_merge_all_heads.py  2025_04_27_1527_final_merge.py  2025_04_27_1528_merge_all_branches.py  2025_04_27_1529_remove_duplicate_table.py  (+7 more)
backend/app/: backend_pre_start.py  celery_app.py  celery_beat_schedule.py  initial_data.py  main.py  scheduled_tasks.py  worker.py
backend/certs/: generate-certs.ps1  generate-certs.sh  redis_cert.cnf
backend/docs/: README_REDIS_SSL.md  REDIS_SSL_IMPLEMENTATION_SUMMARY.md  REDIS_SSL_SETUP.md
backend/init-scripts/: 01-init-user.sh  02-init-db.sh  02-init-test-runner-db.sh
backend/scripts/: README.md  backend_scripts_audit_report.md  beat-fixed.sh  beat-start-unix.sh  beat-start.ps1  beat-start.sh  development-entrypoint.ps1  development-entrypoint.sh  development-setup.ps1  development-setup.sh  entrypoint.ps1  entrypoint.sh  fix-imports.ps1  flower-start.ps1  flower-start.sh  format-imports.ps1  format-imports.sh  format.ps1  format.sh  lint.ps1  lint.sh  production-entrypoint.sh  run.ps1  run.sh  test_csrf_implementation.py  testing-entrypoint.sh  worker-fixed.sh  worker-start.ps1  worker-start.sh
backend/test/: CURRENT_TEST_INFRASTRUCTURE_GUIDE.md  FACTORY_PATTERN_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TEST_OPTIMIZATION_EXAMPLES.md  TEST_SUMMARY_REPORT.md  conftest.py  test_api_auth_comprehensive.py  test_api_health.py  test_api_login.py  test_api_permissions.py  test_api_rbac_comprehensive.py  test_api_roles.py  test_api_users.py  test_audit_log_model.py  test_auth_simplified.py  test_base_uuid_model.py  test_basic_functionality.py  test_config.py  test_crud_permission.py  test_crud_permission_group.py  test_crud_role.py  test_crud_role_group.py  test_crud_user.py  test_csrf_implementation.py  test_db_session.py  test_email.py  test_integration_rbac.py  test_models_role_permission.py  test_models_user.py  test_password_history_model.py  test_permission_group_model.py  test_permission_model.py  test_role_group_map_model.py  test_role_permission_integration.py  test_sanitization.py  test_security.py  test_simple_mock.py  test_user_role_model.py  utils.py
(+662 files in other folders)
