[tool.black]
line-length = 110
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | ../react-frontend
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = ["--import-mode=importlib"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 110
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["../react-frontend", "alembic", ".venv", "venv"]

[tool.mypy]
python_version = '3.10'
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_return_any = false
warn_unreachable = true
disallow_untyped_defs = false
disallow_untyped_calls = false
follow_imports = 'silent'
ignore_missing_imports = true
pretty = true
show_error_codes = true
exclude = ['^../react-frontend/.*$', '^alembic/.*$']

[[tool.mypy.overrides]]
module = 'sqlmodel.*'
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = 'sqlalchemy.*'
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = 'pydantic.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'app.models.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'app.core.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'app.api.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'app.crud.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'app.utils.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'app.deps.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'app.db.*'
ignore_errors = true

[tool.poetry]
name = "fastapi-rbac-backend"
version = "0.1.0"
description = "FastAPI RBAC backend for user management and authentication"
authors = ["Naim Faizy <mnaim.faizy@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
# Add other dependencies here

[tool.poetry.dev-dependencies]
# Add development dependencies here
